@@ -51,7 +51,6 @@ File::IgnoreReadonly                           = 0
 File::Listing                                  = 0
 File::Listing::Ftpcopy                         = 0
 File::Touch                                    = 0
-HTML::Barcode::QRCode                          = 0
 HTTP::Tiny                                     = 0
 IPC::Run                                       = 0
 JSON                                           = 0
