@@ -129,10 +129,6 @@ File::Touch
 
 =item *
 
-HTML::Barcode::QRCode
-
-=item *
-
 HTTP::Tiny
 
 =item *
